--- a/public/assets/scss/default/_common.scss
+++ b/public/assets/scss/default/_common.scss
@@ -77,7 +77,7 @@ body {
 // start hear
 
 .bg-1{
-    background: #e00a0a;
+    background: #145886;
 }
 .bg-secondary{
     background: #1D2027!important;
@@ -444,7 +444,7 @@ body {
         width: 50px;
         line-height: 18px;
         &.active{
-            background: #e00a0a;
+            background: #145886;
             color: #ffff;
         }
         &:hover{
@@ -502,11 +502,11 @@ body {
             background: #fff;
             .title{
                 margin-bottom: 0;
-                color: #e00a0a;
+                color: #145886;
                 margin-bottom: -5px;
             }
             span{
-                color: #e00a0a;
+                color: #145886;
                 font-weight: 400;
                 font-size: 14px;
                 line-height: 18px;
