--- a/public/assets/scss/elements/_about.scss
+++ b/public/assets/scss/elements/_about.scss
@@ -929,11 +929,11 @@
         }
         span{
             left: -52%;
-            border-left: 19px solid #DF0A0A;
+            border-left: 19px solid #145886;
             border-top: 12px solid transparent;
             border-bottom: 12px solid transparent;
             @media #{$large-mobile} {
-                border-left: 15px solid #DF0A0A;
+                border-left: 15px solid #145886;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
             }
