--- a/public/assets/scss/elements/_back-totop.scss
+++ b/public/assets/scss/elements/_back-totop.scss
@@ -78,12 +78,12 @@
 	fill: none; 
 }
 .progress-wrap svg { 
-    color: #df0a0a;
+    color: #145886;
 	border-radius: 50%;
 	background: #fff;
 }
 .progress-wrap svg.progress-circle path {
-    stroke: #df0a0a;
+    stroke: #145886;
     stroke-width: 34px;
 	box-sizing:border-box;
 	-webkit-transition: all 200ms linear;
