--- a/public/assets/scss/elements/_banner.scss
+++ b/public/assets/scss/elements/_banner.scss
@@ -62,7 +62,7 @@
         letter-spacing: 1px;
 
         span {
-            color: #DF0A0A;
+            color: #145886;
             font-weight: 800;
         }
     }
@@ -95,7 +95,7 @@
 
         span {
             font-style: italic;
-            color: #DF0A0A;
+            color: #145886;
             font-weight: 300;
             font-size: 70px;
 
