--- a/public/assets/scss/elements/_cta.scss
+++ b/public/assets/scss/elements/_cta.scss
@@ -4,7 +4,7 @@
 .cta-one-bg {
     background-image: url(../images/cta/01.jpg);
     background-repeat: no-repeat;
-    background-color: #DF0A0A;
+    background-color: #145886;
     background-blend-mode: multiply;
     overflow: hidden;
     background-position: center;
