--- a/public/assets/scss/elements/_footer.scss
+++ b/public/assets/scss/elements/_footer.scss
@@ -5,7 +5,7 @@
 .background-cta{
     background-image: url(../images/footer/callto-action.png);
     background-repeat: no-repeat;
-    background-color: #DF0A0A;
+    background-color: #145886;
     background-blend-mode: multiply;
     overflow: hidden;
     border-radius: 100px;
@@ -332,7 +332,7 @@
                     a{
                         max-width: max-content;
                         padding-left: 0;
-                        color: #DF0A0A;
+                        color: #145886;
                         display: flex;
                         align-items: center;
                         margin-top: -1px;
