--- a/public/assets/scss/elements/_service.scss
+++ b/public/assets/scss/elements/_service.scss
@@ -305,7 +305,7 @@
                     content: '';
                     left: 50%;
                     top: 50%;
-                    background: #DF0A0A;
+                    background: #145886;
                     height: 60px;
                     width: 60px;
                     transform: translate(-50%, -50%);
@@ -629,7 +629,7 @@
                     display: block;
                     width: 1px;
                     height: 100%;
-                    border: 1px dashed #DF0A0A;
+                    border: 1px dashed #145886;
                     top: 3px;
                     left: 18px;
                     position: absolute;
@@ -763,7 +763,7 @@
                         display: block;
                         width: 1px;
                         height: 100%;
-                        border: 1px dashed #DF0A0A;
+                        border: 1px dashed #145886;
                         top: 0;
                         left: 10px;
                         position: absolute;
