--- a/public/assets/scss/elements/_team-details.scss
+++ b/public/assets/scss/elements/_team-details.scss
@@ -110,7 +110,7 @@ p.disc {
   > span {
     display: block;
     height: 100%;
-    background-color: #DF0A0A;
+    background-color: #145886;
     position: relative;
     overflow: hidden;
     transition: width 2s ease-out;
@@ -119,19 +119,19 @@ p.disc {
 
 .orange {
   > span {
-    background-color: #DF0A0A;
+    background-color: #145886;
   }
 }
 
 .red {
   > span {
-    background-color: #DF0A0A;
+    background-color: #145886;
   }
 }
 
 .cadetblue {
   >span {
-    background-color: #DF0A0A;
+    background-color: #145886;
   }
 }
 }
@@ -148,12 +148,12 @@ p.disc {
         margin-bottom: 15px;
         p{
             margin-bottom: 0;
-            color: #DF0A0A;
+            color: #145886;
             font-weight: 500;
             font-size: 16px;
         }
         .persectage{
-            color: #DF0A0A;
+            color: #145886;
             font-weight: 500;
             font-size: 16px;
         }
