--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,7 +48,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 :root {
-  --color-primary: #DF0A0A;
+  --color-primary: #145886;
   --color-primary-2: #0B4DF5;
   --color-primary-3: #F64A00;
   --color-primary-4: #5264F3;
@@ -10794,7 +10794,7 @@ body {
 }
 
 .bg-1 {
-  background: #e00a0a;
+  background: #145886;
 }
 
 .bg-secondary {
@@ -11156,7 +11156,7 @@ body {
   line-height: 18px;
 }
 .pagination button.active {
-  background: #e00a0a;
+  background: #145886;
   color: #ffff;
 }
 .pagination button:hover {
@@ -11215,11 +11215,11 @@ body {
 }
 .blog-grid-inner .blog-header .date .title {
   margin-bottom: 0;
-  color: #e00a0a;
+  color: #145886;
   margin-bottom: -5px;
 }
 .blog-grid-inner .blog-header .date span {
-  color: #e00a0a;
+  color: #145886;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -17737,7 +17737,7 @@ button.menu.rts-btn.btn-primary-3-menu:hover .menu-light {
   z-index: 3;
   width: 0;
   height: 0;
-  border-left: 14px solid #DF0A0A;
+  border-left: 14px solid #145886;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
   top: 50%;
@@ -18242,7 +18242,7 @@ button.menu.rts-btn.btn-primary-3-menu:hover .menu-light {
   letter-spacing: 1px;
 }
 .banner-one-inner .pre-title span {
-  color: #DF0A0A;
+  color: #145886;
   font-weight: 800;
 }
 .banner-one-inner .title {
@@ -18277,7 +18277,7 @@ button.menu.rts-btn.btn-primary-3-menu:hover .menu-light {
 }
 .banner-one-inner .title span {
   font-style: italic;
-  color: #DF0A0A;
+  color: #145886;
   font-weight: 300;
   font-size: 70px;
 }
@@ -21470,13 +21470,13 @@ body.thirteen-body .title-area span {
 }
 .thumbnail-image-gallery .video-play-button span {
   left: -52%;
-  border-left: 19px solid #DF0A0A;
+  border-left: 19px solid #145886;
   border-top: 12px solid transparent;
   border-bottom: 12px solid transparent;
 }
 @media only screen and (max-width: 575px) {
   .thumbnail-image-gallery .video-play-button span {
-    border-left: 15px solid #DF0A0A;
+    border-left: 15px solid #145886;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
   }
@@ -22230,7 +22230,7 @@ section.svg-container:nth-last-of-type(0) svg.radial-progress {
   content: "";
   left: 50%;
   top: 50%;
-  background: #DF0A0A;
+  background: #145886;
   height: 60px;
   width: 60px;
   transform: translate(-50%, -50%);
@@ -22489,7 +22489,7 @@ section.svg-container:nth-last-of-type(0) svg.radial-progress {
   display: block;
   width: 1px;
   height: 100%;
-  border: 1px dashed #DF0A0A;
+  border: 1px dashed #145886;
   top: 3px;
   left: 18px;
   position: absolute;
@@ -22615,7 +22615,7 @@ section.svg-container:nth-last-of-type(0) svg.radial-progress {
   display: block;
   width: 1px;
   height: 100%;
-  border: 1px dashed #DF0A0A;
+  border: 1px dashed #145886;
   top: 0;
   left: 10px;
   position: absolute;
@@ -23825,7 +23825,7 @@ section.svg-container:nth-last-of-type(0) svg.radial-progress {
 .cta-one-bg {
   background-image: url(../images/cta/01.jpg);
   background-repeat: no-repeat;
-  background-color: #DF0A0A;
+  background-color: #145886;
   background-blend-mode: multiply;
   overflow: hidden;
   background-position: center;
@@ -25728,7 +25728,7 @@ section.svg-container:nth-last-of-type(0) svg.radial-progress {
   content: "";
   height: 100%;
   width: 133%;
-  background: linear-gradient(180deg, #5a00005a 0%, #df0a0a8c 100%);
+  background: linear-gradient(180deg, #5a00005a 0%, #1458868c 100%);
   left: 0;
   top: 0;
   transform: rotate(-54deg) translateY(-144%);
@@ -26463,7 +26463,7 @@ section.svg-container:nth-last-of-type(0) svg.radial-progress {
 .portfolio-area.style-5 .item::after {
   content: "";
   position: absolute;
-  background-color: #df0a0a;
+  background-color: #145886;
   opacity: 0.902;
   clip-path: polygon(100% 0, 100% 100%, 45.5% 100%, 0% 55%, 0 0);
   width: 100%;
@@ -31910,19 +31910,19 @@ p.disc {
 .rts-progress-one-wrapper .meter > span {
   display: block;
   height: 100%;
-  background-color: #DF0A0A;
+  background-color: #145886;
   position: relative;
   overflow: hidden;
   transition: width 2s ease-out;
 }
 .rts-progress-one-wrapper .orange > span {
-  background-color: #DF0A0A;
+  background-color: #145886;
 }
 .rts-progress-one-wrapper .red > span {
-  background-color: #DF0A0A;
+  background-color: #145886;
 }
 .rts-progress-one-wrapper .cadetblue > span {
-  background-color: #DF0A0A;
+  background-color: #145886;
 }
 
 .rts-progress-one-wrapper .single-progress {
@@ -31937,12 +31937,12 @@ p.disc {
 }
 .rts-progress-one-wrapper .progress-top p {
   margin-bottom: 0;
-  color: #DF0A0A;
+  color: #145886;
   font-weight: 500;
   font-size: 16px;
 }
 .rts-progress-one-wrapper .progress-top .persectage {
-  color: #DF0A0A;
+  color: #145886;
   font-weight: 500;
   font-size: 16px;
 }
@@ -32711,13 +32711,13 @@ p.disc {
 }
 
 .progress-wrap svg {
-  color: #df0a0a;
+  color: #145886;
   border-radius: 50%;
   background: #fff;
 }
 
 .progress-wrap svg.progress-circle path {
-  stroke: #df0a0a;
+  stroke: #145886;
   stroke-width: 34px;
   box-sizing: border-box;
   -webkit-transition: all 200ms linear;
@@ -32885,7 +32885,7 @@ p.disc {
 .background-cta {
   background-image: url(../images/footer/callto-action.png);
   background-repeat: no-repeat;
-  background-color: #DF0A0A;
+  background-color: #145886;
   background-blend-mode: multiply;
   overflow: hidden;
   border-radius: 100px;
@@ -33198,7 +33198,7 @@ p.disc {
 .footer-one-single-wized .post-wrapper .single-footer-post .post-right a {
   max-width: max-content;
   padding-left: 0;
-  color: #DF0A0A;
+  color: #145886;
   display: flex;
   align-items: center;
   margin-top: -1px;
