--- a/public/assets/scss/default/_variables.scss
+++ b/public/assets/scss/default/_variables.scss
@@ -1,6 +1,6 @@
 :root {
     // themes color
-    --color-primary: #DF0A0A;
+    --color-primary: #145886;
     --color-primary-2: #0B4DF5;
     --color-primary-3: #F64A00;
     --color-primary-4: #5264F3;
