--- a/public/assets/scss/elements/_button.scss
+++ b/public/assets/scss/elements/_button.scss
@@ -396,7 +396,7 @@ button {
     z-index: 3;
     width: 0;
     height: 0;
-    border-left: 14px solid #DF0A0A;
+    border-left: 14px solid #145886;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
     top: 50%;
