--- a/public/assets/scss/elements/_project.scss
+++ b/public/assets/scss/elements/_project.scss
@@ -60,7 +60,7 @@
             content: "";
             height: 100%;
             width: 133%;
-            background: linear-gradient(180deg, #5a00005a 0%, #df0a0a8c 100%);
+            background: linear-gradient(180deg, #5a00005a 0%, #1458868c 100%);
             left: 0;
             top: 0;
             transform: rotate(-54deg) translateY(-144%);
@@ -801,7 +801,7 @@
         &::after{
             content: "";
             position: absolute;
-            background-color: #df0a0a;
+            background-color: #145886;
             opacity: .902;
             clip-path: polygon(100% 0,100% 100%,45.5% 100%,0% 55%,0 0);
             width: 100%;
