--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -45,6 +45,11 @@
 
 ----------------------------*/
 /* Default  */
+.test-one {
+  background: #fff;
+  padding: 130px;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 :root {
