--- a/public/assets/scss/default/_variables.scss
+++ b/public/assets/scss/default/_variables.scss
@@ -3,7 +3,7 @@
     --color-primary: #145886;
     --color-primary-2: #0B4DF5;
     --color-primary-3: #F64A00;
-    --color-primary-4: #5264F3;
+    --color-primary-4: #145886;
     --color-primary-5: #B00F0F;
     --color-primary-6: #F64A00;
     --color-primary-7: #E87556;
