--- a/public/assets/scss/elements/_about.scss
+++ b/public/assets/scss/elements/_about.scss
@@ -568,7 +568,7 @@
                 padding-bottom: 0;
             }
             &.active{
-                color: #0B4DF5;
+                color: #145886;
             }
         }
     }
