--- a/public/assets/scss/elements/_blog.scss
+++ b/public/assets/scss/elements/_blog.scss
@@ -915,7 +915,7 @@
     }
     .body{
         span{
-            color: #0B4DF5;
+            color: #145886;
             font-size: 16px;
             font-weight: 500;
         }
