--- a/public/assets/scss/default/_variables.scss
+++ b/public/assets/scss/default/_variables.scss
@@ -1,7 +1,7 @@
 :root {
     // themes color
     --color-primary: #145886;
-    --color-primary-2: #0B4DF5;
+    --color-primary-2: #145886;
     --color-primary-3: #F64A00;
     --color-primary-4: #145886;
     --color-primary-5: #B00F0F;
