--- a/public/assets/scss/header/_header.scss
+++ b/public/assets/scss/header/_header.scss
@@ -258,8 +258,8 @@
             display: block;
             max-width: max-content;
 
-            @media #{$small-mobile} {
-                padding: 18px 0;
+            img {
+                width: 100%;
             }
         }
     }
