--- a/public/assets/scss/header/_header.scss
+++ b/public/assets/scss/header/_header.scss
@@ -258,8 +258,8 @@
             display: block;
             max-width: max-content;
 
-            img {
-                width: 100%;
+            @media #{$small-mobile} {
+                padding: 18px 0;
             }
         }
     }
