--- a/public/assets/scss/default/_variables.scss
+++ b/public/assets/scss/default/_variables.scss
@@ -2,10 +2,10 @@
     // themes color
     --color-primary: #145886;
     --color-primary-2: #145886;
-    --color-primary-3: #F64A00;
+    --color-primary-3: #145886;
     --color-primary-4: #145886;
     --color-primary-5: #B00F0F;
-    --color-primary-6: #F64A00;
+    --color-primary-6: #145886;
     --color-primary-7: #E87556;
     --color-primary-8: #845CFF;
     --color-primary-9: #4A3BCA;
