--- a/public/assets/scss/elements/_banner.scss
+++ b/public/assets/scss/elements/_banner.scss
@@ -2029,7 +2029,7 @@ header.header-home-nine{
 
 .title-wrapper-twelve.center{
     .pre-title{
-        color: #F64A00;
+        color: #145886;
         padding: 7px 16px;
         border-radius: 20px;
         border: 1px solid #E9E9E9;
