--- a/public/assets/scss/elements/_team.scss
+++ b/public/assets/scss/elements/_team.scss
@@ -724,7 +724,7 @@
         height: 333px;
         left: 10%;
         top: 60%;
-        background: #F64A00;
+        background: #145886;
         border-radius: 50%;
         z-index: 0;
         @media #{$sm-layout} {
