--- a/public/assets/scss/elements/_testimonial.scss
+++ b/public/assets/scss/elements/_testimonial.scss
@@ -1165,7 +1165,7 @@
 
 .rts-testimonials-area-start-12{
     .testimonials-main-wrapper-nine{
-        background: #F64A00;
+        background: #145886;
         p.dsic{
             color: #FFFFFF;
         }
