--- a/public/assets/scss/header/_header.scss
+++ b/public/assets/scss/header/_header.scss
@@ -576,7 +576,7 @@
 
             i {
                 margin-right: 10px;
-                color: #F64A00;
+                color: #145886;
             }
 
             a {
@@ -595,7 +595,7 @@
 
             i {
                 margin-right: 10px;
-                color: #F64A00;
+                color: #145886;
                 transform: rotate(-30deg);
             }
 
