--- a/public/assets/scss/elements/_about.scss
+++ b/public/assets/scss/elements/_about.scss
@@ -1066,7 +1066,7 @@
                 margin-bottom: 10px;
             }
             span{
-                color: #F64A00;
+                color: #145886;
                 font-weight: 500;
                 font-size: 18px;
                 line-height: 30px;
@@ -1298,7 +1298,7 @@ svg.radial-progress {
 	}
 	circle.bar--animated {
 		stroke-dasharray: 219.91148575129;
-		stroke: #F64A00;
+		stroke: #145886;
 		stroke-dashoffset: 219.91148575129;
 		stroke-width: 3px;
         transition: .3s;
@@ -1371,7 +1371,7 @@ section.svg-container {
         align-items: flex-start;
     }
     .right-title{
-        border-right: 3px solid #F64A00;
+        border-right: 3px solid #145886;
         p.disc{
             max-width: 80%;
         }
@@ -1385,7 +1385,7 @@ section.svg-container {
     gap: 50px;
     .call-to-action{
         span{
-            color: #F64A00;
+            color: #145886;
             display: block;
             font-weight: 500;
             margin-bottom: 5px;
