--- a/public/assets/scss/elements/_business-goal.scss
+++ b/public/assets/scss/elements/_business-goal.scss
@@ -69,7 +69,7 @@
     margin-bottom: 80px;
     .success-rate{
         position: absolute;
-        background: #F64A00;
+        background: #145886;
         padding: 47px;
         left: -1%;
         bottom: -13%;
